--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,7 @@ services:
     restart: always
     container_name: "compreface-ui"
     ports:
-      - "83:80"
+      - "8000:80"
     depends_on:
       - compreface-api
       - compreface-admin
@@ -67,6 +67,8 @@ services:
       - CLIENT_MAX_BODY_SIZE=${max_request_size}
       - PROXY_READ_TIMEOUT=${read_timeout:-60000}ms
       - PROXY_CONNECT_TIMEOUT=${connection_timeout:-10000}ms
+     networks:
+      - face_network
 
   compreface-core:
     image: ${registry}compreface-core:${CORE_VERSION}
@@ -78,3 +80,7 @@ services:
       - UWSGI_PROCESSES=${uwsgi_processes:-2}
       - UWSGI_THREADS=${uwsgi_threads:-1}
 
+
+networks:
+  face_network:
+    external: true
