--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     image: ${registry}compreface-postgres-db:${POSTGRES_VERSION}
     restart: always
     container_name: "compreface-postgres-db"
+    networks:  # set network
+      - face_network
     environment:
       - POSTGRES_USER=${postgres_username}
       - POSTGRES_PASSWORD=${postgres_password}
@@ -23,6 +25,8 @@ services:
     image: ${registry}compreface-admin:${ADMIN_VERSION}
     restart: always
     container_name: "compreface-admin"
+    networks:  # set network
+      - face_network
     environment:
       - POSTGRES_USER=${postgres_username}
       - POSTGRES_PASSWORD=${postgres_password}
@@ -82,6 +86,8 @@ services:
     image: ${registry}compreface-core:${CORE_VERSION}
     restart: always
     container_name: "compreface-core"
+    networks:  # set network
+      - face_network
     environment:
       - ML_PORT=3000
       - IMG_LENGTH_LIMIT=${max_detect_size}
