--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ email_from=
 email_password=
 enable_email_server=false
 save_images_to_db=true
-compreface_api_java_options=-Xmx8g
-compreface_admin_java_options=-Xmx8g
+compreface_api_java_options=-Xmx4g
+compreface_admin_java_options=-Xmx1g
 max_file_size=5MB
 max_request_size=10M
 max_detect_size=640
@@ -19,8 +19,8 @@ uwsgi_processes=2
 uwsgi_threads=1
 connection_timeout=10000
 read_timeout=60000
-ADMIN_VERSION=1.1.0
-API_VERSION=1.1.0
-FE_VERSION=1.1.0
-CORE_VERSION=1.1.0-arcface-r100
-POSTGRES_VERSION=1.1.0
+ADMIN_VERSION=1.2.0
+API_VERSION=1.2.0
+FE_VERSION=1.2.0
+CORE_VERSION=1.2.0
+POSTGRES_VERSION=1.2.0
