--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,30 +3,24 @@ version: '3.4'
 volumes:
   postgres-data:
 
-networks:  # make network
-  face_network:
-    external: true
-
 services:
   compreface-postgres-db:
     image: ${registry}compreface-postgres-db:${POSTGRES_VERSION}
     restart: always
     container_name: "compreface-postgres-db"
-    networks:  # set network
-      - face_network
     environment:
       - POSTGRES_USER=${postgres_username}
       - POSTGRES_PASSWORD=${postgres_password}
       - POSTGRES_DB=${postgres_db}
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    networks:
+      - face-network
 
   compreface-admin:
-    image: ${registry}compreface-admin:${ADMIN_VERSION}
     restart: always
+    image: ${registry}compreface-admin:${ADMIN_VERSION}
     container_name: "compreface-admin"
-    networks:  # set network
-      - face_network
     environment:
       - POSTGRES_USER=${postgres_username}
       - POSTGRES_PASSWORD=${postgres_password}
@@ -43,13 +37,13 @@ services:
     depends_on:
       - compreface-postgres-db
       - compreface-api
+    networks:
+      - face-network
 
   compreface-api:
-    image: ${registry}compreface-api:${API_VERSION}
     restart: always
+    image: ${registry}compreface-api:${API_VERSION}
     container_name: "compreface-api"
-    networks:  # set network
-      - face_network
     depends_on:
       - compreface-postgres-db
     environment:
@@ -63,15 +57,15 @@ services:
       - MAX_REQUEST_SIZE=${max_request_size}B
       - CONNECTION_TIMEOUT=${connection_timeout:-10000}
       - READ_TIMEOUT=${read_timeout:-60000}
+    networks:
+      - face-network
 
   compreface-fe:
-    image: ${registry}compreface-fe:${FE_VERSION}
     restart: always
+    image: ${registry}compreface-fe:${FE_VERSION}
     container_name: "compreface-ui"
-    networks:  # set network
-      - face_network
     ports:
-      - "8003:80"
+      - "8000:80"
     depends_on:
       - compreface-api
       - compreface-admin
@@ -79,20 +73,23 @@ services:
       - CLIENT_MAX_BODY_SIZE=${max_request_size}
       - PROXY_READ_TIMEOUT=${read_timeout:-60000}ms
       - PROXY_CONNECT_TIMEOUT=${connection_timeout:-10000}ms
-      
-
+    networks:
+      - face-network
 
   compreface-core:
-    image: ${registry}compreface-core:${CORE_VERSION}
     restart: always
+    image: ${registry}compreface-core:${CORE_VERSION}
     container_name: "compreface-core"
-    networks:  # set network
-      - face_network
     environment:
       - ML_PORT=3000
       - IMG_LENGTH_LIMIT=${max_detect_size}
       - UWSGI_PROCESSES=${uwsgi_processes:-2}
       - UWSGI_THREADS=${uwsgi_threads:-1}
-
-
-
+    healthcheck:
+      test: curl --fail http://localhost:3000/healthcheck || exit 1
+      interval: 10s
+      retries: 0
+      start_period: 0s
+      timeout: 1s
+    networks:
+      - face-network
